<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.current_item.CurrentItemFragment">

    <ImageView
        android:id="@+id/cuttingBoardBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="1.425"
        android:scaleY="1.425"
        android:src="@drawable/board"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageFrame"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="@+id/cuttingBoardBackground"
        app:layout_constraintStart_toStartOf="@+id/cuttingBoardBackground"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageContainer"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageFrame"
        app:layout_constraintEnd_toEndOf="@+id/imageFrame"
        app:layout_constraintStart_toStartOf="@+id/imageFrame"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/paragraphContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:src="@drawable/textbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameContainer"
        android:contentDescription="@string/paragraph_content_description" />

    <TextView
        android:id="@+id/paragraphTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeMaxTextSize="40sp"
        android:autoSizeMinTextSize="16sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/laila"
        android:padding="15dp"
        android:gravity="center"
        android:text="@string/paragraph_placeholder"
        app:layout_constraintBottom_toBottomOf="@+id/paragraphContainer"
        app:layout_constraintEnd_toEndOf="@+id/paragraphContainer"
        app:layout_constraintStart_toStartOf="@+id/paragraphContainer"
        app:layout_constraintTop_toTopOf="@+id/paragraphContainer" />

    <ImageView
        android:id="@+id/nameContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/namebox"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="@+id/paragraphContainer"
        app:layout_constraintStart_toStartOf="@+id/paragraphContainer"
        app:layout_constraintTop_toBottomOf="@+id/imageFrame" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeMaxTextSize="48sp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/laila_semibold"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/name_placeholder"
        app:layout_constraintBottom_toTopOf="@+id/paragraphContainer"
        app:layout_constraintEnd_toEndOf="@+id/nameContainer"
        app:layout_constraintStart_toStartOf="@+id/nameContainer"
        app:layout_constraintTop_toTopOf="@+id/nameContainer" />

</androidx.constraintlayout.widget.ConstraintLayout>